[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scene/player_data_management/player_data_management.gd" id="1"]

[node name="PlayerDataManagement" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 214.0
offset_bottom = 196.0

[node name="btn_get_friend_leaderboard" type="Button" parent="VBoxContainer"]
offset_right = 184.0
offset_bottom = 31.0
text = "GetFriendLeaderboard"

[node name="btn_get_leaderboard" type="Button" parent="VBoxContainer"]
offset_top = 35.0
offset_right = 184.0
offset_bottom = 66.0
text = "GetLeaderboard"

[node name="btn_get_player_statistics" type="Button" parent="VBoxContainer"]
offset_top = 70.0
offset_right = 184.0
offset_bottom = 101.0
text = "GetPlayerStatistics"

[node name="btn_update_player_statistics" type="Button" parent="VBoxContainer"]
offset_top = 105.0
offset_right = 184.0
offset_bottom = 136.0
text = "UpdatePlayerStastics"

[node name="lbl_json_parse_result" type="Label" parent="VBoxContainer"]
offset_top = 140.0
offset_right = 184.0
offset_bottom = 166.0
text = "json_parse_result"

[node name="value" type="TextEdit" parent="VBoxContainer/lbl_json_parse_result"]
offset_top = 36.0
offset_right = 591.0
offset_bottom = 240.0

[connection signal="pressed" from="VBoxContainer/btn_get_friend_leaderboard" to="." method="_on_btn_get_friend_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_get_leaderboard" to="." method="_on_btn_get_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_get_player_statistics" to="." method="_on_btn_get_player_statistics_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_update_player_statistics" to="." method="_on_btn_update_player_statistics_pressed"]
